- open tv section - hide global website

--- a/app/Resources/views/footer_local.html.twig
+++ b/app/Resources/views/footer_local.html.twig
@@ -2,7 +2,7 @@
     <section class="container">
         <h1>A place where miracles happen!</h1>
         <nav class="global">
-            <a href="{{ path('gospelcenterPageGlobal_home') }}" class="logo"></a>
+            {#<a href="{{ path('gospelcenterPageGlobal_home') }}" class="logo"></a>#}
             <ul>
                 {% spaceless %}
                     {% include "::nav/centers.html.twig" %}
