--- a/app/Resources/views/nav/centers.html.twig
+++ b/app/Resources/views/nav/centers.html.twig
@@ -1,4 +1,4 @@
 <li><a href="{{ path('gospelcenterPage_home', {'center': 'lausanne'}) }}">Lausanne</a></li>
 <li><a href="{{ path('gospelcenterPage_home', {'center': 'montreux'}) }}">Montreux</a></li>
-<li><a href="{{ path('gospelcenterPage_home', {'center': 'jura'}) }}">Jura</a></li>
+{#<li><a href="{{ path('gospelcenterPage_home', {'center': 'jura'}) }}">Jura</a></li>#}
 <li><a href="{{ path('gospelcenterPage_home', {'center': 'annecy'}) }}">Annecy</a></li>
