--- a/src/gospelcenter/PageBundle/Resources/views/Page/home.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/Page/home.html.twig
@@ -19,11 +19,11 @@
     </div>
     <nav class="top">
         <section class="container">
-            <a id="get_ruban" href=""></a>
+            {#<a id="get_ruban" href=""></a>#}
             <section class="right">
                 <ul class="nav">
-                    <li><a target="_blank"
-                           href="{{ path('gospelcenterPageGlobal_home') }}">{{ 'gc.nav.gcmovement'|trans }}</a></li>
+                   {#<li><a target="_blank"
+                           href="{{ path('gospelcenterPageGlobal_home') }}">{{ 'gc.nav.gcmovement'|trans }}</a></li>#}
                     <li><a target="_blank" href="http://www.ministeres.org">{{ 'gc.nav.apostolicTeam'|trans }}</a></li>
                 </ul>
                 {% if app.user %}
