--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/bases.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/bases.html.twig
@@ -7,7 +7,7 @@
 <section class="formGray">
     <h1>{{ 'gc.page.bases.moreInfos'|trans }}</h1>
 
-    <form>
+    <form action="" method="POST">
         <fieldset class="left width1_3">
             <input placeholder="Nom">
             <input placeholder="E-mail">
