random ads for home

--- a/src/gospelcenter/PageBundle/Resources/views/Page/home.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/Page/home.html.twig
@@ -78,7 +78,7 @@
 
                 <div class="container">
 
-                    {% for ad in ads %}
+                    {% for ad in ads|slice(0, 3) %}
 
                         <div>
                             <a {% if ad.url|isexternal(ad.url) %}target="_blank"{% endif %} href="{{ ad.url }}">
