change image for GCL About

--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
@@ -329,17 +329,17 @@
 
         <h1>Une musique centrée sur Jésus</h1>
 
-        {% set believeImg = 'bundles/gospelcenterpage/images/confession.jpg' %}
+        {% set musicImg = 'bundles/gospelcenterpage/images/musique_lausanne.jpg' %}
 
         <img class="big"
-             src="{{ asset(believeImg)| imagine_filter('blog_big_low') }}"
-             srcset="{{ asset(believeImg)| imagine_filter('blog_big_low') }} 2x"
-             data-img="{{ asset(believeImg)| imagine_filter('blog_big') }}"
-             data-img_2x="{{ asset(believeImg)| imagine_filter('blog_big_2x') }}"
-             data-img_tablet="{{ asset(believeImg)| imagine_filter('blog_big_tablet') }}"
-             data-img_tablet_2x="{{ asset(believeImg)| imagine_filter('blog_big_tablet_2x') }}"
-             data-img_mobile="{{ asset(believeImg)| imagine_filter('blog_big_mobile') }}"
-             data-img_mobile_2x="{{ asset(believeImg)| imagine_filter('blog_big_mobile_2x') }}">
+             src="{{ asset(musicImg)| imagine_filter('blog_big_low') }}"
+             srcset="{{ asset(musicImg)| imagine_filter('blog_big_low') }} 2x"
+             data-img="{{ asset(musicImg)| imagine_filter('blog_big') }}"
+             data-img_2x="{{ asset(musicImg)| imagine_filter('blog_big_2x') }}"
+             data-img_tablet="{{ asset(musicImg)| imagine_filter('blog_big_tablet') }}"
+             data-img_tablet_2x="{{ asset(musicImg)| imagine_filter('blog_big_tablet_2x') }}"
+             data-img_mobile="{{ asset(musicImg)| imagine_filter('blog_big_mobile') }}"
+             data-img_mobile_2x="{{ asset(musicImg)| imagine_filter('blog_big_mobile_2x') }}">
 
         <p>Nous croyons à l’importance et à la place centrale de la musique dans la vie de l’Eglise. La louange, dans un
             style actuel et moderne, mais avant tout centrée sur Jésus, est donc naturellement une part essentielle de
