API Location accept XMLHttpRequest

--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
@@ -194,21 +194,23 @@
             dynamique qui désire effectuer un travail de qualité.</h2>
 
         <article class="frame">
-            <h1>Coord. de l'équipe pastorale</h1>
+            <h1>Pastoral Team</h1>
 
             <p>Marc Gallay</p>
+
+            <a href="mailto:info@gc-lausanne.org">info@gc-lausanne.org</a>
         </article>
 
         <article class="frame">
-            <h1>Coord. des Bases</h1>
+            <h1>Bases</h1>
 
-            <p>Marc Gallay</p>
+            <p>Chantal Cioffi</p>
 
             <a href="mailto:bases@gc-lausanne.org">bases@gc-lausanne.org</a>
         </article>
 
         <article class="frame">
-            <h1>Musique</h1>
+            <h1>Music</h1>
 
             <p>Gaël Dufour</p>
 
@@ -216,15 +218,15 @@
         </article>
 
         <article class="frame">
-            <h1>Technique</h1>
+            <h1>Technical</h1>
 
             <p>David van der Maas</p>
 
-            <a href="mailto:...@gc-lausanne.org">...@gc-lausanne.org</a>
+            <a href="mailto:technique@gc-lausanne.org">technique@gc-lausanne.org</a>
         </article>
 
         <article class="frame">
-            <h1>Responsable Enfance et Jeunesse</h1>
+            <h1>Children and Youth</h1>
 
             <p>Fiona Bland</p>
 
@@ -232,52 +234,19 @@
         </article>
 
         <article class="frame">
-            <h1>Gospel Minis (0-3 ans)</h1>
-
-            <a href="mailto:...@gc-lausanne.org">...@gc-lausanne.org</a>
-
-        </article>
-
-        <article class="frame">
-            <h1>Gospel Kids (4-7 ans)</h1>
-
-            <p>Francine Gerber</p>
-
-            <a href="mailto:...@gc-lausanne.org">...@gc-lausanne.org</a>
-        </article>
-
-        <article class="frame">
-            <h1>Gospel Teens (7-13 ans)</h1>
-
-            <p>Fiona Bland</p>
-
-            <a href="mailto:gospelkids@gc-lausanne.org">gospelkids@gc-lausanne.org</a>
-        </article>
-
-        <article class="frame">
-            <h1>Gospel Youth</h1>
-
-            <p>Fiona Bland</p>
-
-            <a href="mailto:...@gc-lausanne.org">...@gc-lausanne.org</a>
-        </article>
-
-        <article class="frame">
-            <h1>Accueil</h1>
-
-            <p>Vincent Spycher</p>
+            <h1>Welcome</h1>
 
             <p>Héloïse Denham</p>
 
-            <a href="mailto:...@gc-lausanne.org">...@gc-lausanne.org</a>
+            <a href="mailto:welcome@gc-lausanne.org">welcome@gc-lausanne.org</a>
         </article>
 
         <article class="frame">
-            <h1>Resp. équipiers de prière</h1>
+            <h1>Prayer mates</h1>
 
             <p>Nathalie Pecorini</p>
 
-            <a href="mailto:...@gc-lausanne.org">...@gc-lausanne.org</a>
+            <a href="mailto:equipiersdepriere@gc-lausanne.org">equipiersdepriere@gc-lausanne.org</a>
         </article>
 
         <article class="frame">
@@ -287,7 +256,7 @@
 
             <p>Laetitia Brunner</p>
 
-            <a href="mailto:...@gc-lausanne.org">...@gc-lausanne.org</a>
+            <a href="mailto:newchristians@gc-lausanne.org">newchristians@gc-lausanne.org</a>
         </article>
 
     </article>
