--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
@@ -195,15 +195,17 @@
             dynamique qui désire effectuer un travail de qualité.</h2>
 
         <article class="frame">
-            <h1>Coord. de l'équipe pastorale</h1>
+            <h1>équipe pastorale</h1>
 
             <p>Marc Gallay</p>
+
+            <a href="mailto:info@gc-lausanne.org">info@gc-lausanne.org</a>
         </article>
 
         <article class="frame">
-            <h1>Coord. des Bases</h1>
+            <h1>Les Bases</h1>
 
-            <p>Marc Gallay</p>
+            <p>Chantal Cioffi</p>
 
             <a href="mailto:bases@gc-lausanne.org">bases@gc-lausanne.org</a>
         </article>
@@ -221,64 +223,31 @@
 
             <p>David van der Maas</p>
 
-            <a href="mailto:...@gc-lausanne.org">...@gc-lausanne.org</a>
+            <a href="mailto:technique@gc-lausanne.org">technique@gc-lausanne.org</a>
         </article>
 
         <article class="frame">
-            <h1>Responsable Enfance et Jeunesse</h1>
+            <h1>Enfance et Jeunesse</h1>
 
             <p>Fiona Bland</p>
 
             <a href="mailto:gospelkids@gc-lausanne.org">gospelkids@gc-lausanne.org</a>
-        </article>
-
-        <article class="frame">
-            <h1>Gospel Minis (0-3 ans)</h1>
-
-            <a href="mailto:...@gc-lausanne.org">...@gc-lausanne.org</a>
-
-        </article>
-
-        <article class="frame">
-            <h1>Gospel Kids (4-7 ans)</h1>
-
-            <p>Francine Gerber</p>
-
-            <a href="mailto:...@gc-lausanne.org">...@gc-lausanne.org</a>
-        </article>
-
-        <article class="frame">
-            <h1>Gospel Teens (7-13 ans)</h1>
-
-            <p>Fiona Bland</p>
-
-            <a href="mailto:gospelkids@gc-lausanne.org">gospelkids@gc-lausanne.org</a>
-        </article>
-
-        <article class="frame">
-            <h1>Gospel Youth</h1>
-
-            <p>Fiona Bland</p>
-
-            <a href="mailto:...@gc-lausanne.org">...@gc-lausanne.org</a>
         </article>
 
         <article class="frame">
             <h1>Accueil</h1>
 
-            <p>Vincent Spycher</p>
-
             <p>Héloïse Denham</p>
 
-            <a href="mailto:...@gc-lausanne.org">...@gc-lausanne.org</a>
+            <a href="mailto:welcome@gc-lausanne.org">welcome@gc-lausanne.org</a>
         </article>
 
         <article class="frame">
-            <h1>Resp. équipiers de prière</h1>
+            <h1>équipiers de prière</h1>
 
             <p>Nathalie Pecorini</p>
 
-            <a href="mailto:...@gc-lausanne.org">...@gc-lausanne.org</a>
+            <a href="mailto:equipiersdepriere@gc-lausanne.org">equipiersdepriere@gc-lausanne.org</a>
         </article>
 
         <article class="frame">
@@ -288,7 +257,7 @@
 
             <p>Laetitia Brunner</p>
 
-            <a href="mailto:...@gc-lausanne.org">...@gc-lausanne.org</a>
+            <a href="mailto:newchristians@gc-lausanne.org">newchristians@gc-lausanne.org</a>
         </article>
 
     </article>
