--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/contact.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/contact.html.twig
@@ -3,7 +3,10 @@
     <h1 class="titlePage"><span>{{ 'gc.title.contact'|trans }}</span></h1>
 
     <section id="map" class="map_full">
-        <iframe src="http://map.gospel-center.com?geo_url=http://beta.gospel-center.com/api/locations/{{ center.location.id }}.geojson"></iframe>
+
+        {% set map_url = "http://beta.gospel-center.com/api/locations/" ~ center.location.id ~ ".geojson" %}
+
+        <iframe src="http://map.gospel-center.com/poi.html?url={{ map_url|url_encode }}"></iframe>
         <article>
             <h1>{{ center.location.name }}</h1>
 
