--- a/app/Resources/views/layoutNew.html.twig
+++ b/app/Resources/views/layoutNew.html.twig
@@ -45,7 +45,7 @@
         {% endfor %}
 
         <nav class="main">
-            {#<a id="get_ruban" href=""></a>#}
+            <a id="get_ruban" href=""></a>
             {% block header_logo %}{% endblock %}
 
 
