--- a/app/Resources/views/localNew.html.twig
+++ b/app/Resources/views/localNew.html.twig
@@ -18,7 +18,7 @@
     </div>
     <nav class="top">
         <section class="container">
-            {#<a id="get_ruban" href=""></a>#}
+            <a id="get_ruban" href=""></a>
             <section class="right">
                 <ul class="nav">
                     {#<li><a target="_blank" href="{{ path('gospelcenterPageGlobal_home') }}">{{ 'gc.nav.gcmovement'|trans }}</a></li>#}
