--- a/src/gospelcenter/PageBundle/Resources/views/Page/home.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/Page/home.html.twig
@@ -23,7 +23,7 @@
     </div>
     <nav class="top">
         <section class="container">
-            {#<a id="get_ruban" href=""></a>#}
+            <a id="get_ruban" href=""></a>
             <section class="right">
                 <ul class="nav">
                    {#<li><a target="_blank"
