--- a/app/Resources/views/ruban_nav.html.twig
+++ b/app/Resources/views/ruban_nav.html.twig
@@ -1,6 +1,6 @@
-<h1><a href="{{ path('gospelcenterPageGlobal_home') }}">Gospel Center</a></h1>
+<h1>{# <a href="{{ path('gospelcenterPageGlobal_home') }}">#}Gospel Center{#</a>#}</h1>
 <nav>
-	<h1>Cities</h1>
+	<h1>{{ 'gc.ruban.cities'|trans }}</h1>
 	<ul>
 		{% spaceless %}
 			{% include "::nav/centers.html.twig" %}
@@ -8,24 +8,24 @@
 	</ul>
 </nav>
 <nav>
-	<h1>Ministries</h1>
+	<h1>{{ 'gc.ruban.ministries'|trans }}</h1>
 	<ul>
 		<li><a href="{{ path('gospelcenterMedia') }}">Gospel Center TV</a></li>
 
 	</ul>
 </nav>
 <nav>
-	<h1>Partners</h1>
+	<h1>{{ 'gc.ruban.partners'|trans }}</h1>
 	<ul>
 		<li><a target="_blank" href="http://gospel-wave.org/">Gospel Wave</a></li>
-		<li><a target="_blank" href="http://gcj.ch/">Gospel Center Jura</a></li>
+		{#<li><a target="_blank" href="http://gcj.ch/">Gospel Center Jura</a></li>#}
 		<li><a target="_blank" href="http://www.ee-oron.ch/">Eglise évangélique d'Oron</a></li>
 		<li><a target="_blank" href="http://www.laguerison.org/">AIMG</a></li>
 		<li><a target="_blank" href="http://www.gospel-diffusion.com">Gospel Diffusion</a></li>
 	</ul>
 </nav>
 <nav class="social">
-    <h1>Social</h1>
+    <h1>{{ 'gc.ruban.social'|trans }}</h1>
 	<ul>
 		<li><a href="">Facebook</a></li>
 		<li><a href="">Twitter</a></li>
