--- a/app/Resources/views/footer_local.html.twig
+++ b/app/Resources/views/footer_local.html.twig
@@ -1,4 +1,12 @@
 <footer>
+    <section class="social">
+        {% if center.ref == "lausanne" %}
+            <a target="_blank" id="facebook" class="icon" href="https://www.facebook.com/GCLausanne"></a>
+            <a target="_blank" id="youtube" class="icon" href="https://www.youtube.com/channel/UC-xOsiKqDr_vx3Vl1GGycmg"></a>
+            <a target="_blank" id="gctv" class="icon" href="{{ path('gospelcenterMedia_center', {'center': center.ref}) }}"></a>
+        {% else %}
+        {% endif %}
+    </section>
     <section class="container">
         <h1>A place where miracles happen!</h1>
         <nav class="global">
