update about for GCLausanne

--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
@@ -126,13 +126,21 @@
                 <img src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcGallay.jpg') }}"
                      alt="Marc Gallay"/>
                 <section>
-                    <h1>Marc Gallay</h1>
+                    <h1>Marc & Christine Gallay</h1>
 
-                    <p>Pastor</p>
-
-                    <p>Member of leadership team</p>
+                    <p>Pastoral couple of Gospel Center Lausanne</p>
                 </section>
 
+            </article>
+
+            <article class="people">
+                <img src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/Jean-PhilippeBaertschi.jpg') }}"
+                     alt="Jean-Philippe Bärtschi"/>
+                <section>
+                    <h1>Jean-Philippe Bärtschi</h1>
+
+                    <p>Pastor trainee</p>
+                </section>
             </article>
 
             <article class="people">
@@ -190,8 +198,8 @@
 
     <article class="tab default" id="staff">
 
-        <h2 class="slogan">Le staff du Gospel Center Lausanne est une équipe
-            dynamique qui désire effectuer un travail de qualité.</h2>
+        <h2 class="slogan">The staff in Gospel Center Lausanne is a dynamique team that wishes to accomplish a work of
+            good quality.</h2>
 
         <article class="frame">
             <h1>Pastoral Team</h1>
@@ -199,30 +207,6 @@
             <p>Marc Gallay</p>
 
             <a href="mailto:info@gc-lausanne.org">info@gc-lausanne.org</a>
-        </article>
-
-        <article class="frame">
-            <h1>Bases</h1>
-
-            <p>Chantal Cioffi</p>
-
-            <a href="mailto:bases@gc-lausanne.org">bases@gc-lausanne.org</a>
-        </article>
-
-        <article class="frame">
-            <h1>Music</h1>
-
-            <p>Gaël Dufour</p>
-
-            <a href="mailto:worship@gc-lausanne.org">worship@gc-lausanne.org</a>
-        </article>
-
-        <article class="frame">
-            <h1>Technical</h1>
-
-            <p>David van der Maas</p>
-
-            <a href="mailto:technique@gc-lausanne.org">technique@gc-lausanne.org</a>
         </article>
 
         <article class="frame">
@@ -234,15 +218,47 @@
         </article>
 
         <article class="frame">
+            <h1>Music</h1>
+
+            <p>Gaël Dufour</p>
+
+            <a href="mailto:worship@gc-lausanne.org">worship@gc-lausanne.org</a>
+        </article>
+
+        <article class="frame">
+            <h1>Basis</h1>
+
+            <p>Chantal Cioffi</p>
+
+            <a href="mailto:bases@gc-lausanne.org">bases@gc-lausanne.org</a>
+        </article>
+
+        <article class="frame">
+            <h1>Technique</h1>
+
+            <p>David van der Maas</p>
+
+            <a href="mailto:technique@gc-lausanne.org">technique@gc-lausanne.org</a>
+        </article>
+
+        <article class="frame">
+            <h1>Multimedia</h1>
+
+            <p>Yoann Gern</p>
+
+            <a href="mailto:multimedia@gc-lausanne.org">multimedia@gc-lausanne.org</a>
+        </article>
+
+        <article class="frame">
             <h1>Welcome</h1>
 
-            <p>Héloïse Denham</p>
+            <p>Vincent Spycher</p>
 
             <a href="mailto:welcome@gc-lausanne.org">welcome@gc-lausanne.org</a>
         </article>
 
         <article class="frame">
-            <h1>Prayer mates</h1>
+            <h1>Prayer team</h1>
 
             <p>Nathalie Pecorini</p>
 
@@ -254,9 +270,15 @@
 
             <p>David Klopfenstein</p>
 
-            <p>Laetitia Brunner</p>
-
             <a href="mailto:newchristians@gc-lausanne.org">newchristians@gc-lausanne.org</a>
+        </article>
+
+        <article class="frame">
+            <h1>Coordination Gospel Center Lausanne</h1>
+
+            <p>Hélène Dufour</p>
+
+            <a href="mailto:info@gc-lausanne.org">info@gc-lausanne.org</a>
         </article>
 
     </article>
