--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
@@ -127,13 +127,21 @@
                 <img src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/MarcGallay.jpg') }}"
                      alt="Marc Gallay"/>
                 <section>
-                    <h1>Marc Gallay</h1>
+                    <h1>Marc et Christine Gallay</h1>
 
-                    <p>Pasteur</p>
-
-                    <p>Membre du conseil de direction</p>
+                    <p>Couple pastoral du Gospel Center Lausanne</p>
                 </section>
 
+            </article>
+
+            <article class="people">
+                <img src="{{ asset('bundles/gospelcenterpage/images/leadership/lausanne/Jean-PhilippeBaertschi.jpg') }}"
+                     alt="Jean-Philippe Bärtschi"/>
+                <section>
+                    <h1>Jean-Philippe Bärtschi</h1>
+
+                    <p>Pasteur stagiaire</p>
+                </section>
             </article>
 
             <article class="people">
@@ -203,11 +211,11 @@
         </article>
 
         <article class="frame">
-            <h1>Les Bases</h1>
+            <h1>Enfance et Jeunesse</h1>
 
-            <p>Chantal Cioffi</p>
+            <p>Fiona Bland</p>
 
-            <a href="mailto:bases@gc-lausanne.org">bases@gc-lausanne.org</a>
+            <a href="mailto:gospelkids@gc-lausanne.org">gospelkids@gc-lausanne.org</a>
         </article>
 
         <article class="frame">
@@ -219,6 +227,14 @@
         </article>
 
         <article class="frame">
+            <h1>Les Bases</h1>
+
+            <p>Chantal Cioffi</p>
+
+            <a href="mailto:bases@gc-lausanne.org">bases@gc-lausanne.org</a>
+        </article>
+
+        <article class="frame">
             <h1>Technique</h1>
 
             <p>David van der Maas</p>
@@ -227,17 +243,17 @@
         </article>
 
         <article class="frame">
-            <h1>Enfance et Jeunesse</h1>
+            <h1>Multimédia</h1>
 
-            <p>Fiona Bland</p>
+            <p>Yoann Gern</p>
 
-            <a href="mailto:gospelkids@gc-lausanne.org">gospelkids@gc-lausanne.org</a>
+            <a href="mailto:multimedia@gc-lausanne.org">multimedia@gc-lausanne.org</a>
         </article>
 
         <article class="frame">
             <h1>Accueil</h1>
 
-            <p>Héloïse Denham</p>
+            <p>Vincent Spycher</p>
 
             <a href="mailto:welcome@gc-lausanne.org">welcome@gc-lausanne.org</a>
         </article>
@@ -255,9 +271,15 @@
 
             <p>David Klopfenstein</p>
 
-            <p>Laetitia Brunner</p>
-
             <a href="mailto:newchristians@gc-lausanne.org">newchristians@gc-lausanne.org</a>
+        </article>
+
+        <article class="frame">
+            <h1>Coordination Gospel Center Lausanne</h1>
+
+            <p>Hélène Dufour</p>
+
+            <a href="mailto:info@gc-lausanne.org">info@gc-lausanne.org</a>
         </article>
 
     </article>
