--- a/web/sass/advanced/_about.scss
+++ b/web/sass/advanced/_about.scss
@@ -199,6 +199,11 @@
             &:nth-of-type(3n) {
                 margin-right: 0px;
             }
+
+            a {
+                display: block;
+                margin-top: 3px;
+            }
         }
 
         @media only screen and (max-width: $tabletH) {
