--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
@@ -226,7 +226,7 @@
         </article>
 
         <article class="frame">
-            <h1>Basis</h1>
+            <h1>Bases</h1>
 
             <p>Chantal Cioffi</p>
 
