--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/give.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/give.html.twig
@@ -66,8 +66,9 @@
 
         <h3>Bâtiment</h3>
 
-        <p>Nous désirons faire l’acquisition d’un bâtiment nous permettant de nous développer.
-            Un compte bâtiment est ouvert pour toutes les personnes qui souhaitent voir dans un futur proche le Gospel
+        <p>Nous désirons faire l’acquisition d’un bâtiment nous permettant de nous développer.</p>
+
+        <p>Un compte bâtiment est ouvert pour toutes les personnes qui souhaitent voir dans un futur proche le Gospel
             Center dans de nouveaux locaux. Nous encourageons toutes les personnes à faire un don pour voir ce projet se
             réaliser. CCP 10-186944-9 BV disponible au stand accueil.</p>
 
