--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/give.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/give.html.twig
@@ -1,12 +1,12 @@
 {% block body %}
 
     <h1 class="titlePage"><span>{{ 'gc.title.give'|trans }}</span></h1>
-    <h2 class="slogan">Le Gospel Center Lausanne est une association à but non lucratif,
-        qui ne reçoit aucun soutien financier de l’État.</h2>
+    <h2 class="slogan">Gospel Center Lausanne is a non-profit association, that receives no financial support from the
+        State.</h2>
 
     <article class="tab blog-style">
 
-        <h1>Devenez des partenaires</h1>
+        <h1>Become partners</h1>
 
         {% set giveImg = 'bundles/gospelcenterpage/images/nous-soutenir.jpg' %}
 
@@ -20,39 +20,35 @@
              data-img_mobile="{{ asset(giveImg)| imagine_filter('blog_big_mobile') }}"
              data-img_mobile_2x="{{ asset(giveImg)| imagine_filter('blog_big_mobile_2x') }}">
 
-        <p>La Parole de Dieu nous encourage à devenir partenaire de l’œuvre de Dieu en donnant. Ce don peut se
-            manifester de différentes manières :</p>
+        <p>The Word of God encourages us to be partners in the work of God by giving. This gift can manifest itself in
+            many ways:</p>
 
         <ul>
-            <li>donner du temps,</li>
-            <li>donner de ses talents</li>
-            <li>et aussi donner financièrement.</li>
+            <li>give time</li>
+            <li>give talents</li>
+            <li>or give financially</li>
         </ul>
 
-        <p>Le Gospel Center est une association à but non lucratif, qui ne reçoit aucun soutien financier de l’État et
-            l’ensemble des frais de fonctionnement est assuré par l’engagement libre de chacun. Nos comptes sont
-            approuvés par l’assemblée générale après vérification par une fiduciaire.</p>
+        <p>All of the operating and developing costs are covered by the free commitment of many. Our accounts are
+            approved by the General Assembly, after verification by a fiduciary.</p>
 
-        <h3>La Bible déclare la chose suivante</h3>
+        <h3>The Bible declares...</h3>
 
         <section class="bible">
-            <h1 class="verse">2 Corinthiens 9: 6-7</h1>
-            <blockquote>Celui qui sème peu moissonnera peu, et celui qui sème largement moissonnera largement. Que
-                chacun donne comme il l’a résolu en son cœur, sans tristesse ni contrainte ; car Dieu aime celui qui
-                donne avec joie. Et Dieu a le pouvoir de vous combler de toutes sortes de grâces, afin que, disposant
-                toujours, à tous égards, de tout le nécessaire, vous ayez encore en abondance pour toute œuvre bonne,
-                ainsi qu’il est écrit : Il a répandu ses bienfaits, il a donné aux pauvres ; sa justice demeure pour
-                toujours.
+            <h1 class="verse">2 Corinthians 9: 6-7</h1>
+            <blockquote>But this I say, He that sows sparingly shall reap also sparingly; and he that sows bountifully
+                shall reap also bountifully. Let each man do according as he hath purposed in his heart: not grudgingly,
+                or of necessity: for God loves a cheerful giver.
             </blockquote>
         </section>
 
-        <p>Basés sur cette promesse qui s’est avérée vraie dans de nombreuses circonstances, nous aimerions vous
-            encourager à donner au Gospel Center, sans quoi sa vision ne pourra pas être complètement réalisée.
-            Si vous êtes intéressés à participer aux différents projets du Gospel Center Lausanne notamment par un don
-            financier, vous pouvez le faire par virement postal.</p>
+        <p>Based on this promise that proved right in many circumstances, we would like to encourage you to get involved
+            and invest in this work that announces the Kingdom of God. If you are interested in taking part in the
+            different projects of Gospel Center Lausanne, in particular through a financial gift, you can do it through
+            postal order.</p>
 
         <article class="frame">
-            <h1>Nous soutenir</h1>
+            <h1>Support us</h1>
 
             <p>CCP: 17-637864-2</p>
 
@@ -60,22 +56,19 @@
 
             <p>1007 Lausanne</p>
 
-            <p>Suisse.</p>
+            <p>Switzerland.</p>
         </article>
 
-        <h2 class="underline"><span>Nos projets</span></h2>
+        <h2 class="underline"><span>Our projects</span></h2>
 
-        <h3>Bâtiment</h3>
+        <h3>Building</h3>
 
-        <p>Nous désirons faire l’acquisition d’un bâtiment pouvant accueillir 800 à 1000 personnes.
-            Un compte bâtiment est ouvert pour toutes les personnes qui souhaitent voir dans un futur proche le Gospel
-            Center dans de nouveaux locaux. Nous encourageons toutes les personnes à faire un don pour voir ce projet se
-            réaliser. CCP 10-186944-9 BV disponible au stand accueil.</p>
+        <p>We would like to make the acquisition of a building that will allow us to develop.</p>
 
-        <h3>Distribution de Bible</h3>
-
-        <p>Chaque année le Gospel Center au travers de divers événements et célébrations distribue gratuitement plus de
-            3500 Bibles par année.</p>
+        <p>A building account is open to all of those who wants to see in a near future the Gospel Center in a new venue
+            and so be always more equipped for the mission God placed on our heart. We encourage everyone to make a
+            donation to see this project happen. CCP 10-186944-9. Payment slips are available at the welcome table,
+            during the celebrations. </p>
 
     </article>
 {% endblock %}
