--- a/web/sass/basic.scss
+++ b/web/sass/basic.scss
@@ -113,6 +113,7 @@ h1 {
             -webkit-box-sizing: border-box;
             -moz-box-sizing: border-box;
             box-sizing: border-box;
+            white-space: nowrap;
         }
 
         @media only screen and (max-width: $mobileH) {
