--- a/src/gospelcenter/MediaBundle/Resources/views/layout.html.twig
+++ b/src/gospelcenter/MediaBundle/Resources/views/layout.html.twig
@@ -22,7 +22,6 @@
 
     {% endblock %}
 
-
 </head>
 <body>
 <section id="ruban_nav">
@@ -32,7 +31,7 @@
 <section id="page" class="{{ page }} {% block classPage %}{% endblock %}">
     <header>
 
-        {#<a id="get_ruban" href=""></a>#}
+        <a id="get_ruban" href=""></a>
         <a id="logo_mobile" class="mobile" href="{{ path('gospelcenterMedia') }}"></a>
         <a id="get_nav" class="mobile" href=""></a>
 
