--- a/src/gospelcenter/PageBundle/Resources/views/Page/index.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/Page/index.html.twig
@@ -41,7 +41,7 @@
     </section>
 
     {% if article.ref == "bases" %}
-        {% include "@gospelcenterPage/StaticPage/"~ center.ref ~"/"~ language ~"/bases.html.twig" %}
+        {% include "@gospelcenterPage/Page/bases.html.twig" %}
     {% endif %}
 
 {% endblock %}
