--- a/src/gospelcenter/PageBundle/Resources/views/Page/bases.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/Page/bases.html.twig
@@ -1,7 +1,7 @@
 <h2 class="slogan findBase">{{ 'gc.page.bases.findBase'|trans }}</h2>
 
 <section id="map" class="map_full">
-    {% set map_url = "http://beta.gospel-center.com/bases_" ~ center.ref ~ ".geojson" %}
+    {% set map_url = "http://beta.gospel-center.com/api/bases/" ~ center.ref ~ ".geojson" %}
 
     <iframe src="http://map.gospel-center.com/poi.html?url={{ map_url|url_encode }}"></iframe>
 </section>
