--- a/web/sass/_navNew.scss
+++ b/web/sass/_navNew.scss
@@ -131,6 +131,8 @@ nav.sub_nav {
     margin: 20px auto 10px;
     text-align: center;
     margin-bottom: 70px;
+    overflow: visible;
+    overflow-x: scroll;
 
     ul {
 
@@ -138,10 +140,12 @@ nav.sub_nav {
         &.complex {
             display: inline-block;
             border-bottom: 2px solid $grayDarkGC;
+            white-space: nowrap;
 
             li {
                 display: inline-block;
                 margin-bottom: 2px;
+
 
                 &:last-of-type a {
                     margin-right: 0px;
