--- a/src/gospelcenter/EventBundle/Resources/views/Event/event.html.twig
+++ b/src/gospelcenter/EventBundle/Resources/views/Event/event.html.twig
@@ -91,7 +91,10 @@
             </section>
 
             <section id="map" class="location map_full">
-                <iframe src="http://map.gospel-center.com"></iframe>
+
+                {% set map_url = "http://beta.gospel-center.org/api/locations/" ~ event.location.id ~ ".geojson" %}
+
+                <iframe src="http://map.gospel-center.com/poi.html?url={{ map_url|url_encode }}"></iframe>
                 <article>
                     <h1>{{ event.location.name }}</h1>
 
