GCL About edited

--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/fr/about.html.twig
@@ -360,6 +360,13 @@
             <p><a href="mailto:worship@gc-lausanne.org">worship@gc-lausanne.org</a></p>
         </article>
 
+        <h2 class="underline"><span>Gospel Center Band "LIVE"</span></h2>
+
+        <p>Cet album a été enregistré lors de la conférence de l’AIMG à Lausanne en 2011. C'est le fruit de moments
+            d'adoration authentiques vécus lors de cet événement. Les titres sont chantés en français et en anglais.</p>
+
+        <a target="_blank" href="http://www.gospel-diffusion.com/index.php/musique/gospel_center_band_i_am_free_je_suis_libre_2116.html">Acheter cet album</a>
+
     </article>
 
 
