GCL About edited

--- a/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
+++ b/src/gospelcenter/PageBundle/Resources/views/StaticPage/lausanne/en/about.html.twig
@@ -359,6 +359,8 @@
 
         <h2 class="underline"><span>Gospel Center Band "LIVE"</span></h2>
 
+        <h3>I am free / Je suis libre</h3>
+
         <p>Cet album a été enregistré lors de la conférence de l’AIMG à Lausanne en 2011. C'est le fruit de moments
             d'adoration authentiques vécus lors de cet événement. Les titres sont chantés en français et en anglais.</p>
 
